# hlslbuilder_proto

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  build_dependencies.ps1  readme.md
cmake_modules/: config.cmake.in
docs/: hls2.md  properties.md
hlslbuilder/: CMakeLists.txt
hlslbuilder/include/HLSLBuilder/: ArgList.hh  ArgParser.hh  ArgTree.hh  Builder.hh  Console.hh  HLSLBuilder.hh  HLSLBuilderAPI.hh  HLSLBuilderVersion.hh.in  ProjectReader.hh  SolutionParser.hh  Source.hh  Version.hh  starter.hh
hlslbuilder/include/private/: smpch.hh
hlslbuilder/include/private/Utils/: FileHandler.hh  StringHandler.hh
hlslbuilder/lib/: ArgList.cc  ArgParser.cc  ArgTree.cc  Builder.cc  Console.cc  FileHandler.cc  ProjectReader.cc  SolutionParser.cc  Source.cc  StringHandler.cc  Version.cc  starter.cc
hlslbuilder_exec/: CMakeLists.txt
hlslbuilder_exec/assets/: model.json
hlslbuilder_exec/assets/project_sample/: triangle.hls2
hlslbuilder_exec/include/: Displayer.hh
hlslbuilder_exec/lib/: Displayer.cc  entry.cc
hlslbuilder_tests/: CMakeLists.txt  Hello.cc
hlslbuilder_tests/assets/: test.json
hlslbuilder_tests/assets/project_sample/: invalidPath.hls2  texture.hlsl
hlslbuilder_tests/assets/test_sample/: invalidName.hls2  invalidProperties.hls2  invalidVersion.hls2  test.hlsl  valid.hls2
hlslbuilder_tests/lib/: ArgListTests.cc  ArgParserTests.cc  ArgTreeTests.cc  SolutionParserTests.cc
